1.4 --
	* use gettext to allow translation

1.3 -- May 21st, 2007
	* Add suggestion for CONFIG_SND_AC97_POWER_SAVE
	* Fix inefficient code for readdir (Vince Pinter)
	* Highlight the worst offenders in bold (Vince Pinter)
	* Fix crash when running on 2.4 kernels (Harald Fernengel)
	* Check fgets() return values (Timom Hoenig @ SuSE)
	* add suggestion to enable laptop mode (when disabled)
	* add suggestion to disable bluetooth when unused

1.2 -- May 14th, 2007
	* Manpage contributed by Carlo Segre from the Debian project
	* Fix "shows power usage even on AC" bug, spotted by Steinar
 	  Gunderson
 	* Fix for batteries that report mA instead of mW from Friedrich
	  Oslage

1.1 -- May 13th, 2007
	* Fix bug that shows "you don't have C-states" on mobile CPUs when 
	  the cpu is 100% busy as reported by Friedrich
	* Cosmetic code cleanups (Lindent) as suggested by David Brownell
	* Get rid of popen() and the static sized events array 
	  (Keith Packard)
	* Add some more tips for kernel config options based on various
	  reports/feedback
	* Improve "you are not root so can't get timerstats" message to say 
	  that you need to be root rather than that you need to change your
	  kernel config
	* Make a better effort at locating the kernel .config file
	* Don't show "please turn CONFIG_FOO off" if the kernel you have
	  doesn't even support CONFIG_FOO (yet)
	* Show absolute per-second wakeup counts too (multiple requestors)
	* Add capability to suggest disabling daemons and the like
	

1.0 -- May 11th, 2007
	* Initial Release